--- a/docs/.style/sidebar.sass
+++ b/docs/.style/sidebar.sass
@@ -6,10 +6,12 @@ $sidebar-width: 300px
 
 @mixin hide-column
     max-width: 0
+    max-height: 0
     overflow-x: hidden
 
 @mixin reset-column
     max-width: initial
+    max-height: initial
     overflow-x: initial
     
 body
